Minor layout changes and about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <title>{{ page.title }}</title>
@@ -29,6 +28,7 @@
       <li><a href="/about">About</a></li>
       <li><a href="/screenshots">Screenshots</a></li>
     </ul>
+    </nav>
     <div class="container">
     {{ content }}
     </div>
