--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,15 @@
         </section>
       </div>
     </header>
+    <div class="container">
     <nav>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/screenshots">Screenshots</a></li>
+      <li><a href="/download">Download</a></li>
     </ul>
     </nav>
-    <div class="container">
     {{ content }}
     </div>
 
