Minor changes to navigation links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,18 +19,27 @@
 
         <section id="downloads">
           <a href="https://github.com/GNUSim8085" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/GNUSim8085/GNUSim8085/releases" class="btn btn-github"><span class="icon"></span>All Downloads</a>
         </section>
       </div>
     </header>
-    <div class="container">
     <nav>
+    <div class="container">
+    <a href="/">Home</a>&nbsp;&nbsp;&nbsp;
+    <a href="/about">About</a>&nbsp;&nbsp;&nbsp;
+    <a href="/screenshots">Screenshots</a>&nbsp;&nbsp;&nbsp;
+    <a href="/download">Download</a>&nbsp;&nbsp;&nbsp;
+    </nav>
+    <!--nav>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/screenshots">Screenshots</a></li>
       <li><a href="/download">Download</a></li>
     </ul>
-    </nav>
+    </nav-->
+    </div>
+    <div class="container">
     {{ content }}
     </div>
 
