Deleted about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,22 +26,15 @@
     <nav>
     <div class="container">
     <a href="/">Home</a>&nbsp;&nbsp;&nbsp;
-    <a href="/about">About</a>&nbsp;&nbsp;&nbsp;
     <a href="/screenshots">Screenshots</a>&nbsp;&nbsp;&nbsp;
     <a href="/download">Download</a>&nbsp;&nbsp;&nbsp;
     </nav>
-    <!--nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/screenshots">Screenshots</a></li>
-      <li><a href="/download">Download</a></li>
-    </ul>
-    </nav-->
     </div>
+    <section id="main_content">
     <div class="container">
     {{ content }}
     </div>
+    </section>
 
   </body>
 </html>
