--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     <a href="/">Home</a>&nbsp;&nbsp;&nbsp;
     <a href="/screenshots">Screenshots</a>&nbsp;&nbsp;&nbsp;
     <a href="/download">Download</a>&nbsp;&nbsp;&nbsp;
+    <a href="/halloffame">Hall of fame</a>&nbsp;&nbsp;&nbsp;
     </nav>
     </div>
     <section id="main_content">
