Updated contribute page with translations link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,10 @@
     <nav>
     <div class="container">
     <a href="/">Home</a>&nbsp;&nbsp;&nbsp;
-    <a href="/screenshots">Screenshots</a>&nbsp;&nbsp;&nbsp;
-    <a href="/download">Download</a>&nbsp;&nbsp;&nbsp;
-    <a href="/halloffame">Hall of fame</a>&nbsp;&nbsp;&nbsp;
+    <a href="/screenshots">Screenshots</a>&nbsp;&nbsp;
+    <a href="/download">Download</a>&nbsp;&nbsp;
+    <a href="/halloffame">Hall of fame</a>&nbsp;&nbsp;
+    <a href="/contribute">Contribute</a>&nbsp;&nbsp;
     </nav>
     </div>
     <section id="main_content">
