Added translation status in the stop nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,11 @@
         <h2>A graphical simulator, assembler and debugger for the Intel 8085 microprocessor</h2>
 
         <section id="downloads">
-          <a href="https://github.com/GNUSim8085" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="https://github.com/GNUSim8085/GNUSim8085/releases" class="btn btn-github"><span class="icon"></span>All Downloads</a>
+          <a href="https://github.com/GNUSim8085" class="btn btn-github" target="_blank"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/GNUSim8085/GNUSim8085/releases" class="btn btn-github" target="_blank"><span class="icon"></span>All Downloads</a>
+          <a href="https://hosted.weblate.org/engage/gnusim8085/?utm_source=widget" class="btn" target="_blank">
+            <img src="https://hosted.weblate.org/widgets/gnusim8085/-/svg-badge.svg" alt="Translation status" />
+          </a>
         </section>
       </div>
     </header>
