Simplication of CSS

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,7 @@
-@import url("github-dark.css");
-@import url("stylesheet.css");
+---
+---
+
+@import "{{ site.theme }}";
 nav {
     margin: auto;
 }
