--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     <title>{{ page.title }}</title>
   </head>
@@ -14,8 +12,8 @@
 
     <header>
       <div class="container">
-        <h1>GNUSim8085</h1>
-        <h2>A graphical simulator, assembler and debugger for the Intel 8085 microprocessor</h2>
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <section id="downloads">
           <a href="https://github.com/GNUSim8085" class="btn btn-github" target="_blank"><span class="icon"></span>View on GitHub</a>
@@ -43,3 +41,4 @@
 
   </body>
 </html>
+
