Add link to community page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
     <a href="/download">Download</a>&nbsp;&nbsp;
     <a href="/halloffame">Hall of fame</a>&nbsp;&nbsp;
     <a href="/contribute">Contribute</a>&nbsp;&nbsp;
+    <a href="/community">Community</a>&nbsp;&nbsp;
     </nav>
     </div>
     <section id="main_content">
